--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -636,15 +636,23 @@ strong {
             vertical-align: top;
         }
         &.field-asset {
+            > .content > .top > .controls > .ui-select-field {
+                float: right;
+                width: 32px;
+                height: 22px;
+                margin: 5px 3px 0 6px;
+            }
             &.channel {
-                > .content > .top {
-                    > .ui-label {
-                        float: left;
-                        width: calc(100% - 100px);
-                    }
-                    > .ui-select-field {
-                        float: right;
-                        width: 32px;
+                > .content {
+                    > .top {
+                        > .ui-label {
+                            float: left;
+                            width: calc(100% - 100px);
+                        }
+                        > .ui-select-field {
+                            float: right;
+                            width: 32px;
+                        }
                     }
                 }
             }
