--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -546,9 +546,27 @@ strong {
     }
 
     &.asset-preview {
+        &.large {
+            > .asset-preview {
+                padding: 0 0%;
+                width: calc(100% - 16px);
+            }
+            > .content {
+                margin-top: 100%;
+            }
+        }
+        &.animate {
+            > .asset-preview {
+                transition: padding 100ms, width 100ms;
+            }
+            > .content {
+                transition: margin-top 100ms;
+            }
+        }
         > .asset-preview {
             display: block;
-            width: calc(100% - 16px);
+            width: calc(50% - 16px);
+            padding: 0 25%;
             border: 8px solid $bcg-darker;
             background-color: $bcg-darker;
             background-position: center center;
@@ -556,7 +574,7 @@ strong {
             background-repeat: no-repeat;
         }
         > .content {
-            margin-top: 100%;
+            margin-top: 50%;
         }
     }
     .ui-checkbox.tick {
