Try to reconnect to C3 in launch page

--- a/editor/sass/launch.scss
+++ b/editor/sass/launch.scss
@@ -186,6 +186,12 @@ canvas:focus {
     }
 }
 
+.connecting {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+
 // @media (min-width: 768px) {
 //     #application-splash {
 //         top: 44%;
