Changed from ace to codemirror and added autocomplete using tern

--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -1,30 +1,35 @@
 @import 'fonts';
 
-$ace-bg: #1d292c;
-$ace-gutter-bg: lighten($ace-bg, 2%);
-$ace-text-color: #f8f4f0;
-$ace-gutter-fg: #5b7073;
-$ace-line-highlight: #163a43;
-$ace-step-bg: #c6dbae;
-$ace-fold-bg: #3cff94;
-$ace-keyword: #ed1e79;
-$ace-numeric: #c978eb;
-$ace-support: #77bef3;
-$ace-string: #f1c40f;
-$ace-comment: #779296;
-$ace-variable: #3cff94;
-$ace-parameter: #ff842f;
-$ace-attribute-name: #A9E884;
-$ace-function: $ace-variable;
-$ace-invalid-text: white;
-$ace-invalid-bg: #ff3295;
-$ace-invalid-deprecated-bg: #e3a9ff;
+$editor-bg: #1d292c;
+$editor-gutter-bg: lighten($editor-bg, 2%);
+$editor-text-color: #f8f4f0;
+$editor-gutter-fg: #5b7073;
+$editor-line-highlight: #163a43;
+$editor-step-bg: #c6dbae;
+$editor-fold-bg: #3cff94;
+$editor-operator: #ed1e79;
+$editor-numeric: #c978eb;
+$editor-keyword: #77bef3;
+$editor-string: #f1c40f;
+$editor-comment: #779296;
+$editor-def: #3cff94;
+$editor-variable: white;
+$editor-variable-2: white; //#3cff94;
+$editor-variable-3: white;
+$editor-parameter: #ff842f;
+$editor-attribute-name: #A9E884;
+$editor-property: white;
+$editor-attribute: white;
+$editor-function: $editor-variable;
+$editor-invalid-text: white;
+$editor-invalid-bg: #ff3295;
+$editor-invalid-deprecated-bg: #e3a9ff;
 
 $save-btn-disabled-bg: #35454a;
 $save-btn-disabled-color: #29363b;
 
-$ace-btn-bg: lighten($save-btn-disabled-color, 5%);
-$ace-btn-bg-hover: lighten($save-btn-disabled-color, 7%);
+$editor-btn-bg: lighten($save-btn-disabled-color, 5%);
+$editor-btn-bg-hover: lighten($save-btn-disabled-color, 7%);
 
 $top-bar-line-height: 34px;
 $top-bar-border: 1px;
@@ -52,9 +57,14 @@ body {
     color: $text-color;
 }
 
+#editor-container {
+    height: 100%;
+}
+
 .code-editor {
-    background-color: $ace-gutter-bg;
+    background-color: $editor-gutter-bg;
     display: none; // enabled in js
+    height: 100%;
 
     .code-editor-topbar {
         text-align: center;
@@ -62,7 +72,7 @@ body {
         top: 0;
         height: $top-bar-height;
         line-height: $top-bar-line-height;
-        border-bottom: $top-bar-border solid black;
+        border-bottom: $top-bar-border $editor-bg;
 
         @mixin block {
             display: inline-block;
@@ -74,7 +84,7 @@ body {
 
         .code-editor-save {
             background-color: $muted-green;
-            color: $ace-gutter-bg;
+            color: $editor-gutter-bg;
             font-size: 16px;
 
             @include block();
@@ -94,7 +104,7 @@ body {
 
         .code-editor-readonly {
             background-color: $bg-bright;
-            color: $ace-bg;
+            color: $editor-bg;
             font-size: 14px;
 
             @include block();
@@ -102,7 +112,7 @@ body {
 
         .code-editor-error {
             background-color: $bright-red;
-            color: $ace-bg;
+            color: $editor-bg;
             font-size: 14px;
             @include block();
         }
@@ -111,15 +121,6 @@ body {
             background-color: $muted-green;
             @include block();
         }
-    }
-
-    #editor-container {
-        position: absolute;
-        top: $top-bar-height;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        font-size-adjust: none;
     }
 
     .code-editor-logo {
@@ -143,159 +144,115 @@ body {
         margin-top: 1px;
         font-size: 14px;
     }
+}
 
-    .ace-playcanvas {
-        background-color: $ace-bg;
-        color: $ace-text-color;
+.cm-s-default {
+    &.CodeMirror {
+        height: 100%;
+        background-color: $editor-bg;
+        color: $editor-text-color;
+        font-size: 12px;
+        font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: normal;
+    }
 
-        .ace_gutter {
-            background-color: $ace-gutter-bg;
-            color: $ace-gutter-fg;
-        }
+    div.CodeMirror-selected {
+        background-color: $editor-line-highlight !important;
+    }
 
-        .ace_gutter-active-line {
-            background-color: $ace-line-highlight;
-        }
+    .CodeMirror-gutters {
+        min-height: 100%;
+        background-color: $editor-gutter-bg;
+        border-right: none;
+    }
 
-        .ace_print-margin {
-            width: 1px;
-        }
+    .CodeMirror-lines {
+        padding: 0;
+    }
 
-        .ace_cursor {
-            color: $ace-text-color;
-        }
+    .CodeMirror-linenumber {
+        color: $editor-gutter-fg;
+        min-width: 29px;
+        padding-right: 10px;
+    }
 
-        .ace_marker-layer .ace_selection {
-            background-color: $ace-line-highlight;
-        }
+    .CodeMirror-cursor {
+       border-left: 1px solid $editor-text-color !important;
+    }
 
-        .ace_marker-layer .ace_active-line {
-            background-color: $ace-line-highlight;
-        }
+    span.cm-comment {
+        color: $editor-comment;
+    }
 
-        .ace_multiselect .ace_selection.ace_start {
-            box-shadow: 0 0 3px 0px $ace-bg;
-            border-radius: 2px;
-        }
+    span.cm-atom, span.cm-keyword {
+        color: $editor-keyword;
+    }
 
-        .ace_marker-layer .ace_active-line {
-            background-color: $ace-bg;
-        }
+    span.cm-number {
+        color: $editor-numeric;
+    }
 
-        .ace_marker-layer .ace_step {
-            background-color: $ace-step-bg;
-        }
+    span.cm-property {
+        color: $editor-property;
+    }
 
-        .ace_marker-layer .ace_bracket {
-            margin: -1px 0 0 -1px;
-            border: 1px solid $ace-line-highlight;
-        }
+    span.cm-attribute {
+        color: $editor-keyword;
+    }
 
-        .ace_marker-layer .ace_selected-word {
-            border: 1px solid $ace-parameter;
-        }
+    span.cm-string {
+        color: $editor-string;
+    }
 
-        .ace_fold {
-            background-color: $ace-fold-bg;
-            border-color: $ace-text-color;
-        }
+    span.cm-def {
+        color: $editor-def;
+    }
 
-        .ace_keyword {
-            color: $ace-keyword;
-        }
+    span.cm-variable {
+        color: $editor-variable;
+    }
 
-        .ace_constant.ace_language {
-            color: $ace-numeric;
-        }
+    span.cm-variable-2 {
+        color: $editor-variable-2;
+    }
 
-        .ace_constant.ace_numeric {
-            color: $ace-numeric;
-        }
+    span.cm-variable-3 {
+        color: $editor-variable-3;
+    }
 
-        .ace_constant.ace_character {
-            color: $ace-numeric;
-        }
+    span.cm-operator {
+        color: $editor-operator;
+    }
 
-        .ace_constant.ace_other {
-            color: $ace-numeric;
-        }
+    .CodeMirror-matchingbracket {
+        text-decoration: underline;
+        color: $editor-text-color !important;
+    }
 
-        .ace_support {
-            color: $ace-support;
-        }
-
-        .ace_storage {
-            color: $ace-support;
-        }
-
-        .ace_invalid {
-            color: $ace-invalid-text;
-            background-color: $ace-invalid-bg;
-        }
-
-        .ace_invalid.ace_deprecated {
-            color: $ace-invalid-text;
-            background-color: $ace-invalid-deprecated-bg;
-        }
-
-        .ace_string {
-            color: $ace-string;
-        }
-
-        .ace_comment {
-            color: $ace-comment;
-        }
-
-        .ace_variable {
-            color: $ace-variable;
-        }
-
-        .ace_variable.ace_parameter {
-            color: $ace-parameter;
-        }
-
-        .ace_entity.ace_other.ace_attribute-name {
-            color: $ace-attribute-name;
-        }
-
-        .ace_entity.ace_name.ace_function {
-            color: $ace_function;
-
-        }
-
-        .ace_entity.ace_name.ace_tag {
-            color: $ace-keyword;
-        }
-
-        .ace_search {
-            background-color: $save-btn-disabled-color;
-        }
-
-        .ace_button {
-            background-color: $ace-btn-bg;
-            color: white;
-        }
-
-        .ace_button:hover {
-            background-color: $ace-btn-bg-hover;
-        }
-
-        .ace_replace_form {
-            button {
-                background-color: $ace-btn-bg;
-                color: white;
-            }
-
-            button:hover {
-                background-color: $ace-btn-bg-hover;
-            }
-        }
-
-        .ace_search_field {
-            color: $text-color;
-        }
+    .CodeMirror-nonmatchingbracket {
+        color: $editor-text-color !important;
     }
 }
+
+// .cm-s-monokai.CodeMirror ::selection { background: rgba(73, 72, 62, .99); }
+// .cm-s-monokai.CodeMirror ::-moz-selection { background: rgba(73, 72, 62, .99); }
+// .cm-s-monokai .CodeMirror-guttermarker { color: white; }
+// .cm-s-monokai .CodeMirror-guttermarker-subtle { color: #d0d0d0; }
+
+// .cm-s-monokai span.cm-bracket {color: #f8f8f2;}
+// .cm-s-monokai span.cm-tag {color: #f92672;}
+// .cm-s-monokai span.cm-header {color: #ae81ff;}
+// .cm-s-monokai span.cm-link {color: #ae81ff;}
+// .cm-s-monokai span.cm-error {background: #f92672; color: #f8f8f0;}
+
+// .cm-s-monokai .CodeMirror-activeline-background {background: #373831 !important;}
+// .cm-s-monokai .CodeMirror-matchingbracket {
+//   text-decoration: underline;
+//   color: white !important;
+// }
+
 
 @media (max-width: 480px) {
     .hidden-xs {
