--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -5,12 +5,15 @@ $editor-gutter-bg: lighten($editor-bg, 2%);
 $editor-text-color: #f8f4f0;
 $editor-gutter-fg: #5b7073;
 $editor-line-highlight: #163a43;
+$editor-selection: #275C69;
+$editor-yellow: #f1c40f;
 $editor-step-bg: #c6dbae;
 $editor-fold-bg: #3cff94;
 $editor-operator: #ed1e79;
 $editor-numeric: #c978eb;
 $editor-keyword: #77bef3;
-$editor-string: #f1c40f;
+$editor-string: $editor-yellow;
+$editor-link: $editor-yellow;
 $editor-comment: #779296;
 $editor-def: #3cff94;
 $editor-variable: white;
@@ -160,7 +163,7 @@ body {
     }
 
     div.CodeMirror-selected {
-        background-color: $editor-line-highlight !important;
+        background-color: $editor-selection !important;
     }
 
     .CodeMirror-gutters {
@@ -227,6 +230,10 @@ body {
         color: $editor-operator;
     }
 
+    span.cm-searching {
+        background-color: $editor-selection;
+    }
+
     .CodeMirror-matchingbracket {
         text-decoration: underline;
         color: $editor-text-color !important;
@@ -237,23 +244,59 @@ body {
     }
 }
 
-// .cm-s-monokai.CodeMirror ::selection { background: rgba(73, 72, 62, .99); }
-// .cm-s-monokai.CodeMirror ::-moz-selection { background: rgba(73, 72, 62, .99); }
-// .cm-s-monokai .CodeMirror-guttermarker { color: white; }
-// .cm-s-monokai .CodeMirror-guttermarker-subtle { color: #d0d0d0; }
+.CodeMirror-Tern-hint-doc {
+    max-width: 400px;
+}
 
-// .cm-s-monokai span.cm-bracket {color: #f8f8f2;}
-// .cm-s-monokai span.cm-tag {color: #f92672;}
-// .cm-s-monokai span.cm-header {color: #ae81ff;}
-// .cm-s-monokai span.cm-link {color: #ae81ff;}
-// .cm-s-monokai span.cm-error {background: #f92672; color: #f8f8f0;}
+.CodeMirror-Tern-tooltip {
+    border-color:  $editor-bg;
+    color: $editor-text-color;
+    padding: 5px 10px;
+    background-color: $editor-line-highlight;
+    text-align: justify;
 
-// .cm-s-monokai .CodeMirror-activeline-background {background: #373831 !important;}
-// .cm-s-monokai .CodeMirror-matchingbracket {
-//   text-decoration: underline;
-//   color: white !important;
-// }
+    a {
+        color: $editor-link;
+    }
+}
 
+.CodeMirror-hints {
+    border-color: darken($editor-bg, 5%);
+    background: $editor-bg;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+
+.CodeMirror-hint {
+    color: $editor-comment;
+}
+
+li.CodeMirror-hint-active {
+    background: $editor-line-highlight;
+    color: $editor-text-color;
+}
+
+.CodeMirror-Tern-farg {
+    opacity: 1;
+}
+
+.CodeMirror-Tern-fname {
+    color: $editor-text-color;
+}
+
+.CodeMirror-Tern-farg {
+    color: $editor-text-color;
+}
+
+.CodeMirror-Tern-farg-current {
+    color: $editor-yellow;
+}
+
+.CodeMirror-Tern-type {
+    color: $editor-keyword;
+}
 
 @media (max-width: 480px) {
     .hidden-xs {
