changed alignment to left for tooltips

--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -255,7 +255,7 @@ body {
     color: $editor-text-color;
     padding: 5px 10px;
     background-color: $editor-tooltip-bg;
-    text-align: justify;
+    text-align: left;
     border-radius: 0;
 
     @extend .font-regular;
