--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1310,6 +1310,26 @@ strong {
         &.c-camera > .title > .icon:after {
             content: '\E584';
         }
+        &.rename {
+            > .title {
+                > .text {
+                    display: none;
+                }
+                > .ui-text-field {
+                    width: calc(100% - 24px);
+                    margin: 0;
+                    padding: 0;
+                    border: none;
+                    background-color: transparent;
+
+                    > .field {
+                        padding: 0;
+                        @extend .font-regular;
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
     }
 }
 
