improve material dragging to viewport, preview material on model asset nodes hover drag, preview texture on material asset slots hover drag

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -477,7 +477,7 @@ strong {
 
         &.hole {
             outline: 2px solid $text-active;
-            background-color: rgba($text-active, .4);
+            background-color: transparent;
             &.over {
                 background-color: transparent;
             }
