--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -862,6 +862,27 @@ strong {
             text-overflow: ellipsis;
             white-space: nowrap;
             padding-right: 20px;
+            padding-left: 8px;
+            height: 22px;
+            line-height: 22px;
+            background-color: $bcg-dark;
+
+            &[placeholder] {
+                &:after {
+                    font-size: 24px;
+                    line-height: 14px;
+                }
+            }
+
+            &.null {
+                color: $text-darkest;
+            }
+
+            &:hover {
+                cursor: pointer;
+                background-color: $bcg-darkest;
+                color: $text-primary;
+            }
 
             > .icon {
                 position: absolute;
